@startuml rentals_management
title Schéma Base de Données - Locations & Gestion

entity "cart_locations" as cart_locations {
  *id : bigint
  *user_id : bigint
  start_date : date
  end_date : date
  rental_days : integer
  daily_rate : decimal(10,2)
  total_rental_cost : decimal(10,2)
  deposit_amount : decimal(10,2)
  tax_rate : decimal(5,2)
  subtotal : decimal(10,2)
  tax_amount : decimal(10,2)
  total_amount : decimal(10,2)
  total_items : integer
  status : enum(active,abandoned,converted)
  expires_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "cart_item_locations" as cart_item_locations {
  *id : bigint
  *cart_location_id : bigint
  *product_id : bigint
  quantity : integer
  daily_rate : decimal(10,2)
  rental_days : integer
  subtotal : decimal(10,2)
  deposit_per_item : decimal(10,2)
  total_deposit : decimal(10,2)
  total_cost : decimal(10,2)
  is_available : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "order_locations" as order_locations {
  *id : bigint
  *order_number : string (unique)
  *user_id : bigint
  --Dates--
  start_date : date
  end_date : date
  rental_days : integer
  --Tarification--
  daily_rate : decimal(10,2)
  total_rental_cost : decimal(10,2)
  deposit_amount : decimal(10,2)
  late_fee_per_day : decimal(8,2)
  penalty_amount : decimal(10,2)
  tax_rate : decimal(5,2)
  subtotal : decimal(10,2)
  tax_amount : decimal(10,2)
  total_amount : decimal(10,2)
  --Statuts--
  status : enum(pending,confirmed,active,completed,closed,overdue,cancelled)
  frontend_confirmed : boolean
  status_updated_at : timestamp
  admin_notes : text
  --Paiement--
  payment_method : string
  payment_status : string
  payment_transaction_id : string
  stripe_payment_intent : string
  deposit_authorization_id : string
  deposit_captured : boolean
  deposit_captured_at : timestamp
  paid_at : timestamp
  --Facturation--
  invoice_number : string
  invoice_generated : boolean
  invoice_sent : boolean
  invoice_file_path : string
  --Emails--
  last_completed_email_sent : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "order_item_locations" as order_item_locations {
  *id : bigint
  *order_location_id : bigint
  *product_id : bigint
  product_name : string
  product_description : text
  product_image : string
  quantity : integer
  daily_rate : decimal(10,2)
  rental_days : integer
  subtotal : decimal(10,2)
  deposit_per_item : decimal(10,2)
  total_deposit : decimal(10,2)
  penalty_amount : decimal(10,2)
  total_cost : decimal(10,2)
  status : enum(pending,confirmed,active,returned,overdue,damaged)
  return_condition : enum(good,damaged,lost)
  return_notes : text
  returned_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

cart_locations ||--o{ cart_item_locations : cart_location_id
order_locations ||--o{ order_item_locations : order_location_id
@enduml
